Added our names

--- a/StrangeLoop2012/Professional-JS-CS/public/index.html
+++ b/StrangeLoop2012/Professional-JS-CS/public/index.html
@@ -170,6 +170,12 @@
         <div id="header">
           <img src="logo2.png">
           <h1>Welcome to Professional Javascript and CoffeeScript Development</h1>
+
+
+          <ul>
+            <li>Peter Bell, <a href='http://twitter.com/peterbell'>@peterbell</a></li>
+            <li>Pete Campbell, <a href='http://twitter.com/sumirolabs'>@sumirolabs</a></li>
+          </ul>
         </div>
 
         <div id="getting-started">
