--- a/StrangeLoop2012/Professional-JS-CS/public/index.html
+++ b/StrangeLoop2012/Professional-JS-CS/public/index.html
@@ -169,7 +169,9 @@
       <div id="content">
         <div id="header">
           <img src="logo2.png">
-          <h1>Welcome to Professional Javascript and CoffeeScript Development</h1>
+          <p/>
+          <br>
+          <h1>Welcome to Professional JavaScript and CoffeeScript Development</h1>
 
 
           <ul>
@@ -194,6 +196,8 @@
           <ul>
             <li><a href='http://pivotal.github.com/jasmine/'>Jasmine</a></li>
             <li><a href='http://coffeescript.org'>CoffeeScript</a></li>
+            <li><a href='http://underscorejs.org'>Underscore JS</a></li>
+            <li><a href='http://www.amazon.com/JavaScript-Good-Parts-Douglas-Crockford/dp/0596517742'>JavaScript: The Good Parts</a>
           </ul>
         </div>
 
