Trying to undo my changes
This reverts commit 2cc06938bde962a503a3cba4cc908819cdd1bfe2.

--- a/TodoMVC/public/index.html
+++ b/TodoMVC/public/index.html
@@ -169,9 +169,7 @@
       <div id="content">
         <div id="header">
           <img src="logo2.png">
-          <p/>
-          <br>
-          <h1>Welcome to Professional JavaScript and CoffeeScript Development</h1>
+          <h1>Welcome to Professional Javascript and CoffeeScript Development</h1>
 
 
           <ul>
@@ -196,8 +194,6 @@
           <ul>
             <li><a href='http://pivotal.github.com/jasmine/'>Jasmine</a></li>
             <li><a href='http://coffeescript.org'>CoffeeScript</a></li>
-            <li><a href='http://underscorejs.org'>Underscore JS</a></li>
-            <li><a href='http://www.amazon.com/JavaScript-Good-Parts-Douglas-Crockford/dp/0596517742'>JavaScript: The Good Parts</a>
           </ul>
         </div>
 
